[project]
name = "clustering"
version = "0.1.2"
description = "Clustering algorithms for use with PolyChordLite"
authors = [{name="Adam Neil Ormondroyd", email="Adam.Ormondroyd@gmail.com"}]
readme = "README.md"
dependencies = ["numpy<1.24", "pyclustering", "scikit-learn"]

[project.urls]
repository = "https://github.com/adamormondroyd/clustering"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["black", "pytest"]
